--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{18828910-F528-48F5-B56D-7C1658D0987A}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -70,6 +70,7 @@
     <Compile Include="ControlInterfaces\IBOColTabControl.cs" />
     <Compile Include="ControlInterfaces\IBusinessObjectControl.cs" />
     <Compile Include="ControlInterfaces\IBusinessObjectPanel.cs" />
+    <Compile Include="ControlInterfaces\IButtonSizePolicy.cs" />
     <Compile Include="ControlInterfaces\ICollapsiblePanel.cs" />
     <Compile Include="ControlInterfaces\ICollapsiblePanelGroupControl.cs" />
     <Compile Include="ControlInterfaces\IControlHabanero.cs" />
