--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D04BB138-C144-4406-9A41-17192E7D44BF}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -107,7 +107,10 @@
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
@@ -269,6 +272,26 @@
     <Compile Include="RSAPasswordCrypter.cs" />
     <Compile Include="Source.cs" />
     <Compile Include="SqlFormatter.cs" />
+    <Compile Include="Util\ByteString.cs" />
+    <Compile Include="Util\ConfigFileSettings.cs" />
+    <Compile Include="Util\DateTimeUtilities.cs" />
+    <Compile Include="Util\EmailSender.cs" />
+    <Compile Include="Util\FileUtilities.cs" />
+    <Compile Include="Util\File\CSVFileReader.cs" />
+    <Compile Include="Util\File\CSVFileWriter.cs" />
+    <Compile Include="Util\File\TextFileLoader.cs" />
+    <Compile Include="Util\File\TypeLoader.cs" />
+    <Compile Include="Util\IdNumberUtilities.cs" />
+    <Compile Include="Util\ImageThumbnailCreator.cs" />
+    <Compile Include="Util\JpgMetaData.cs" />
+    <Compile Include="Util\LongText.cs" />
+    <Compile Include="Util\ReflectionUtilities.cs" />
+    <Compile Include="Util\SerialisationUtilities.cs" />
+    <Compile Include="Util\SortedStringCollection.cs" />
+    <Compile Include="Util\StringUtilities.cs" />
+    <Compile Include="Util\TypeUtilities.cs" />
+    <Compile Include="Util\Utilities.cs" />
+    <Compile Include="Util\XmlDocumentValidator.cs" />
     <Compile Include="XMLWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
