Fixed project references and build item types.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -379,32 +379,32 @@
     <Compile Include="TransactionLogBusObj.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="key.snk" />
-    <None Include="Loaders\DTDs\businessObjectLookupList.dtd" />
-    <None Include="Loaders\DTDs\class.dtd" />
-    <None Include="Loaders\DTDs\classes.dtd" />
-    <None Include="Loaders\DTDs\column.dtd" />
-    <None Include="Loaders\DTDs\columnLayout.dtd" />
-    <None Include="Loaders\DTDs\filter.dtd" />
-    <None Include="Loaders\DTDs\trigger.dtd" />
-    <None Include="Loaders\DTDs\databaseLookupList.dtd" />
-    <None Include="Loaders\DTDs\field.dtd" />
-    <None Include="Loaders\DTDs\form.dtd" />
-    <None Include="Loaders\DTDs\formGrid.dtd" />
-    <None Include="Loaders\DTDs\grid.dtd" />
-    <None Include="Loaders\DTDs\key.dtd" />
-    <None Include="Loaders\DTDs\parameter.dtd" />
-    <None Include="Loaders\DTDs\primaryKey.dtd" />
-    <None Include="Loaders\DTDs\Prop.dtd" />
-    <None Include="Loaders\DTDs\property.dtd" />
-    <None Include="Loaders\DTDs\relationship.dtd" />
-    <None Include="Loaders\DTDs\simpleLookupList.dtd" />
-    <None Include="Loaders\DTDs\superClass.dtd" />
-    <None Include="Loaders\DTDs\tab.dtd" />
-    <None Include="Loaders\DTDs\ui.dtd" />
-    <None Include="Loaders\DTDs\Rule.dtd" />
-    <None Include="Loaders\XSDs\classes.xsd" />
-    <None Include="Loaders\XSDs\ui.xsd" />
+    <Content Include="key.snk" />
+    <Content Include="Loaders\DTDs\businessObjectLookupList.dtd" />
+    <Content Include="Loaders\DTDs\class.dtd" />
+    <Content Include="Loaders\DTDs\classes.dtd" />
+    <Content Include="Loaders\DTDs\column.dtd" />
+    <Content Include="Loaders\DTDs\columnLayout.dtd" />
+    <Content Include="Loaders\DTDs\filter.dtd" />
+    <Content Include="Loaders\DTDs\trigger.dtd" />
+    <Content Include="Loaders\DTDs\databaseLookupList.dtd" />
+    <Content Include="Loaders\DTDs\field.dtd" />
+    <Content Include="Loaders\DTDs\form.dtd" />
+    <Content Include="Loaders\DTDs\formGrid.dtd" />
+    <Content Include="Loaders\DTDs\grid.dtd" />
+    <Content Include="Loaders\DTDs\key.dtd" />
+    <Content Include="Loaders\DTDs\parameter.dtd" />
+    <Content Include="Loaders\DTDs\primaryKey.dtd" />
+    <Content Include="Loaders\DTDs\Prop.dtd" />
+    <Content Include="Loaders\DTDs\property.dtd" />
+    <Content Include="Loaders\DTDs\relationship.dtd" />
+    <Content Include="Loaders\DTDs\simpleLookupList.dtd" />
+    <Content Include="Loaders\DTDs\superClass.dtd" />
+    <Content Include="Loaders\DTDs\tab.dtd" />
+    <Content Include="Loaders\DTDs\ui.dtd" />
+    <Content Include="Loaders\DTDs\Rule.dtd" />
+    <Content Include="Loaders\XSDs\classes.xsd" />
+    <Content Include="Loaders\XSDs\ui.xsd" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Loaders\Dtds.resx">
