--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -138,7 +138,7 @@
     <Compile Include="Util\TestXmlDocumentValidator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="key.snk" />
+    <Content Include="key.snk" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestResources\TestJpeg.jpg" />
@@ -159,17 +159,17 @@
       <Project>{D04BB138-C144-4406-9A41-17192E7D44BF}</Project>
       <Name>Habanero.Base</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Habanero.Bo\Habanero.Bo.csproj">
+    <ProjectReference Include="..\Habanero.Bo\Habanero.BO.csproj">
       <Project>{9ED22DDE-ED14-43CA-807A-D0A42DFBF322}</Project>
-      <Name>Habanero.Bo</Name>
+      <Name>Habanero.BO</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Console\Habanero.Console.csproj">
       <Project>{9B32C6E9-037A-4610-85CB-95C9A050CF7C}</Project>
       <Name>Habanero.Console</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Habanero.Db\Habanero.Db.csproj">
+    <ProjectReference Include="..\Habanero.Db\Habanero.DB.csproj">
       <Project>{80FEC63C-DBD7-4DAE-882D-9CB93F738B48}</Project>
-      <Name>Habanero.Db</Name>
+      <Name>Habanero.DB</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
