--- a/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
+++ b/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
@@ -138,7 +138,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="key.snk" />
+    <Content Include="key.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
