--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -59,10 +59,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -285,7 +281,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="key.snk" />
+    <Content Include="key.snk" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CollapsiblePanelResource.resx">
@@ -301,11 +297,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\headergradient.png" />
-    <None Include="Resources\nbItemBullet.gif" />
-    <None Include="Resources\nav_icon.png" />
+    <Content Include="Resources\nbItemBullet.gif" />
+    <Content Include="Resources\nav_icon.png" />
     <Content Include="Resources\pinoff_withcolour.png" />
     <Content Include="Resources\pinon_withcolour.png" />
-    <None Include="Resources\smBack.gif" />
+    <Content Include="Resources\smBack.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
