Moved the BORelationshipMapper into the Habanero.BO project and commented all public methods. Changed RelationshipComboBoxMapper to use the BORelationshipMapper.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -117,6 +117,7 @@
     <Compile Include="BOPropCol.cs" />
     <Compile Include="BOPropLookupList.cs" />
     <Compile Include="BORegistry.cs" />
+    <Compile Include="BORelationshipMapper.cs" />
     <Compile Include="BOStatus.cs" />
     <Compile Include="BusinessObjectLoaderBase.cs" />
     <Compile Include="BusinessObjectLastUpdatePropertiesLog.cs" />
