--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <Compile Include="BOError.cs" />
     <Compile Include="BOPropCol.cs" />
+    <Compile Include="BOPropertyMapper.cs" />
     <Compile Include="BOPropLookupList.cs" />
     <Compile Include="BORegistry.cs" />
     <Compile Include="BORelationshipMapper.cs" />
