--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -65,6 +65,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.5.0.1337, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -77,6 +81,8 @@
     <Compile Include="ArchitectureTest.cs" />
     <Compile Include="Base\TestDateTimeNow.cs" />
     <Compile Include="Base\TestDateTimeToday.cs" />
+    <Compile Include="Base\TestDelegatedExceptionNotifier.cs" />
+    <Compile Include="Base\TestRecordingExceptionNotifier.cs" />
     <Compile Include="Base\TestExceptions.cs" />
     <Compile Include="Base\TestGlobalRegistry.cs" />
     <Compile Include="Base\TestHabaneroApp.cs" />
