Worked on writing the contents of a DataStoreInMemory to a stream in Xml format.  Use the DataStoreInMemoryXmlWriter to write and the DataStoreInMemoryXmlReader to read.  Alternately use the DataStoreInMemoryBinaryWriter to write to a binary file, although xml is recommended for ease of upgrading (for a binary file you have to have the same Habanero dll versions when reading it again).

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -156,6 +156,10 @@
     <Compile Include="CriteriaManager\PropDefParameterSQLInfo.cs" />
     <Compile Include="DataAccessorInMemory.cs" />
     <Compile Include="DataStoreInMemory.cs" />
+    <Compile Include="DataStoreInMemoryBinaryReader.cs" />
+    <Compile Include="DataStoreInMemoryBinaryWriter.cs" />
+    <Compile Include="DataStoreInMemoryXmlReader.cs" />
+    <Compile Include="DataStoreInMemoryXmlWriter.cs" />
     <Compile Include="DeleteHelper.cs" />
     <Compile Include="ExceptionHelper.cs" />
     <Compile Include="IBusinessObjectLoader.cs" />
