Moved Habanero Function delegates to Habanero.Base(Util). Added overloads for RunInSTA and RunInMTA in the CrossThreadRunner to have return values.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -302,6 +302,7 @@
     <Compile Include="Util\ConfigFileSettings.cs" />
     <Compile Include="Util\CrossThreadRunner.cs" />
     <Compile Include="Util\DateTimeUtilities.cs" />
+    <Compile Include="Util\Delegates.cs" />
     <Compile Include="Util\EmailSender.cs" />
     <Compile Include="Util\FileUtilities.cs" />
     <Compile Include="Util\File\CSVFileReader.cs" />
