Wrote tests and fixed issue with removing events on the BusinessObjectCollection that have not been added. Changed the creation preference of ControlMappers via reflection to constructors with an IControlFactory argument. Added a ToArray method to the Utilities class. Fixed some code in BusinessObjectLoaderBase to avoid the collection was modified exception. Updated Rhino.Mocks to the latest version.

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -17,7 +17,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -71,6 +71,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -141,6 +144,7 @@
     <Compile Include="Util\TestSortedStringCollection.cs" />
     <Compile Include="Util\TestStringUtilities.cs" />
     <Compile Include="Util\TestTypeUtilities.cs" />
+    <Compile Include="Util\TestUtilities.cs" />
     <Compile Include="Util\TestXmlDocumentValidator.cs" />
   </ItemGroup>
   <ItemGroup>
