Added BOHelper to aid testing BO Rules linked to a BO.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D624008C-47BA-44CC-9CC8-DCEC9F0005B3}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -147,6 +147,7 @@
     <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Base.cs" />
     <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Composition.cs" />
     <Compile Include="TestBOError.cs" />
+    <Compile Include="TestBOHelper.cs" />
     <Compile Include="TestBOObjectID.cs" />
     <Compile Include="TestBOPropertyMapper.cs" />
     <Compile Include="TestBOPropInteger.cs" />
